# mavis-testing

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
tests/: test_example.py
