[tool.poetry]
name = "mavis-testing"
version = "1.0.0"
description = "End-to-end testing for Manage vaccinations in schools (Mavis)"
authors = ["Theodor Vararu <theo@vararu.org>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
playwright = "^1.47.0"
pytest = "^8.3.3"
pytest-playwright = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
